force-app/main/default/objects/PreCallBrief__c/PreCallBrief__c.object-meta.xml
<CustomObject>
    <label>PreCallBrief</label>
    <nameField>
        <label>PreCallBrief Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Call Brief</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>