force-app/main/default/objects/PreCallBrief__c/fields/FamilyMilestones__c.field-meta.xml
<CustomField>
    <fullName>FamilyMilestones__c</fullName>
    <label>FamilyMilestones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>