force-app/main/default/objects/PreCallBrief__c/fields/GeneratedAt__c.field-meta.xml
<CustomField>
    <fullName>GeneratedAt__c</fullName>
    <label>GeneratedAt</label>
    <type>DateTime</type>
</CustomField>