force-app/main/default/objects/PreCallBrief__c/fields/HouseholdSummary__c.field-meta.xml
<CustomField>
    <fullName>HouseholdSummary__c</fullName>
    <label>HouseholdSummary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>