force-app/main/default/objects/PreCallBrief__c/fields/PortfolioSnapshot__c.field-meta.xml
<CustomField>
    <fullName>PortfolioSnapshot__c</fullName>
    <label>PortfolioSnapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>