force-app/main/default/objects/PreCallBrief__c/fields/RecentActivity__c.field-meta.xml
<CustomField>
    <fullName>RecentActivity__c</fullName>
    <label>RecentActivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>